test: raise unit coverage on the SQL-free direct-path changes to ~88%
Add/extend unit tests so new-code diff coverage on this branch clears the 80%
bar for every unit-testable changed file (most now 100%):

- New: K8sDatabaseConfigResolver{,Provider}Test, IdentityQueryTest,
  DirectDeploymentContextTest, DatabaseConfigResolverProvider{,s}Test.
- Extended: K8sContextTest (createFromProperties, deploymentContext),
  HoptimatorDriverTest (direct/unknown-context rowType, valueSchema),
  TableServiceTest (connection-free create + delete lifecycle/restore via
  MockedStatic), VeniceDeployerTest (real getKeyPayloadSchema),
  RemoteToEnumerableConverterRuleTest (convert).
- Testability seam: package-private K8sApi-injection constructor on
  K8sDatabaseConfigResolver (no reflection).

The remaining sub-80% changed files exercise pipeline planning / a live
backend and stay integration-covered by convention.

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>